# holdmind

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  config.py  database.py  limiter.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/auth/: cookies.py  dependencies.py  encryption.py  jwt.py  password.py
backend/memory/: factory.py
backend/models/: __init__.py  chat_message.py  conversation.py  refresh_token.py  user.py
backend/routes/: auth.py  chat.py  conversations.py  memories.py  settings.py  token.py
backend/schemas/: auth.py  chat.py  conversation.py  memory.py
backend/services/: auth_service.py  chat_service.py  conversation_service.py  memory_service.py  pattern_service.py  settings_service.py  token_service.py
backend/tests/: conftest.py  test_auth.py  test_auth_utils.py  test_auto_title.py  test_chat.py  test_chat_integration.py  test_chat_service.py  test_claim_detail.py  test_claims_annotation.py  test_config.py  test_conversations.py  test_memories.py  test_memory_factory.py  test_memory_service.py  test_messages.py  test_models.py  test_pattern_service.py  test_profile.py  test_rate_limiting.py  test_settings.py  test_token_routes.py  test_token_service.py
frontend/: .env.local.example  middleware.ts  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: utils.tsx
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: useChat.ts  useConversations.ts  useMemories.ts  useMessages.ts
(+58 files in other folders)
