[project]
name = "holdmind"
version = "0.1.0"
description = "Memory-augmented AI chatbot backend with belief graph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "recollectx",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
recollectx = { path = "../re-collect(mine)", editable = true }
